# ThemeParkReader

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
ThemeParkReader/: CMakeLists.txt
ThemeParkReader/src/: SpriteParser.hpp  ThemeParkReader.cpp
ThemeParkReader/src/Palette/: Palette.cpp  Palette.hpp
cmake_modules/modules/: FindFreeImage.cmake
main/: CMakeLists.txt
main/src/: main.cpp
reader/: CMakeLists.txt  ThemeParkReader
reader/src/: reader.cpp  reader.hpp
reader/src/palette/: palette.cpp  palette.hpp
reader/src/tab/: tab.cpp  tab.hpp
test/: CMakeLists.txt
test/src/: palette.cpp  tab.cpp  util.hpp
